# jbt-desktop-fixer

./: Cargo.toml  LICENSE  README.md  install.sh  justfile
share/: config.toml  config.yaml  jbt-desktop-fixer.service
src/: app.rs  cli.rs  config.rs  desktop.rs  logger.rs  main.rs
