[package]
name = "jbt-desktop-fixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
log = "0.4.17"
notify = "5.0.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
